# shooter-rust-wasm

./: .gitignore  1.index.js  1.index.js.map  2.index.js  2.index.js.map  Cargo.toml  README.md  index.html  index.js  index.js.map  package-lock.json  package.json  webpack.common.js  webpack.config.js
.github/workflows/: rust-native.yml  rust-wasm-deploy.yml  rust-wasm.yml
game-logic/: Cargo.toml
game-logic/src/: assets_piston.rs  assets_webgl.rs  consts.rs  entity.rs  lib.rs  xor128.rs
game-logic/src/entity/: enemy.rs  entity_id.rs  entity_set.rs  projectile.rs  ref_option.rs  temp_entity.rs
js/: index.js
native-game/: Cargo.toml
native-game/src/: main.rs
rotate-enum/: Cargo.toml
rotate-enum/src/: lib.rs
shooter-rust-native/: Cargo.toml
shooter-rust-native/src/: main.rs
src/: consts.rs  entity.rs  lib.rs  xor128.rs
static/: index.html
