[package]
name = "game-logic"
version = "0.1.0"
authors = ["msakuta <masahiro.sakuta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.69", optional = true }
cgmath = "0.18.0"
vecmath = "1.0.0"
slice-of-array = "0.2.1"
js-sys = { version = "0.3.46", optional = true }

[features]
webgl = [ "web-sys", "wasm-bindgen", "js-sys" ]

[dependencies.web-sys]
optional = true
version = "0.3.4"
features = [
  'Document',
  'Element',
  'KeyboardEvent',
  'HtmlImageElement',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlTexture',
  'Window',
]
