[package]
name = "game-logic"
version = "0.1.0"
authors = ["msakuta <masahiro.sakuta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.69", optional = true }
cgmath = "0.18.0"
vecmath = "1.0.0"
slice-of-array = "0.2.1"
js-sys = { version = "0.3.46", optional = true }
find_folder = { version = "0.3.0", optional = true }
piston_window = { version = "0.81.0", optional = true }
piston2d-sprite = { version = "0.50.0", optional = true }
piston2d-gfx_graphics = { version = "0.56.0", optional = true }
rotate-enum = "0.1.0"
# parser = { git = "https://github.com/msakuta/rusty-parser.git" }
parser = { path = "../../rusty-parser/parser" }

[features]
webgl = [ "web-sys", "wasm-bindgen", "js-sys" ]
piston = [ "find_folder", "piston_window", "piston2d-sprite", "piston2d-gfx_graphics" ]

[dependencies.web-sys]
optional = true
version = "0.3.4"
features = [
  'Document',
  'Element',
  'KeyboardEvent',
  'HtmlImageElement',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlTexture',
  'Window',
]
